fix: projects scrollbar fix

--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,21 @@
-.App {
-  text-align: center;
+.hideScroll::-webkit-scrollbar {
+  width: 5px;
+  height: 3px;
+  border-radius: 100%;
+  opacity: 0.5;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.hideScroll::-webkit-scrollbar-track {
+  background: #719ba0;
+  width: 50px;
+  /* border-radius: 50%; */
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.hideScroll::-webkit-scrollbar-thumb {
+  background: rgb(255, 253, 253);
+  border-radius: 5px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.hideScroll::-webkit-scrollbar-thumb:hover {
+  background: rgb(223, 223, 223);
 }
